--- a/package.json
+++ b/package.json
@@ -45,5 +45,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 10.1.0.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SanchitKhare/ESociety-Project-Web_UI.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SanchitKhare/ESociety-Project-Web_UI/issues"
+  },
+  "homepage": "https://github.com/SanchitKhare/ESociety-Project-Web_UI#readme"
 }
